--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music Player</title>    
+    <title>Music Player</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
 
     <div class="container row">
         <div class="card shadow-lg rounded">
@@ -30,9 +32,12 @@
             </div>
             <div class="card-body">
                 <div id="controls" class="text-center mb-3">
-                    <button class="btn btn-primary rounded-circle"><i id="prev" class="fa-solid fa-backward-step"></i></button>
-                    <button class="btn btn-primary rounded-circle btn-lg mx-2"><i id="play" class="fa-solid fa-play"></i></i></button>
-                    <button class="btn btn-primary rounded-circle"><i id="next" class="fa-solid fa-forward-step"></i></i></button>
+                    <button class="btn btn-primary rounded-circle"><i id="prev"
+                            class="fa-solid fa-backward-step"></i></button>
+                    <button class="btn btn-primary rounded-circle btn-lg mx-2"><i id="play"
+                            class="fa-solid fa-play"></i></i></button>
+                    <button class="btn btn-primary rounded-circle"><i id="next"
+                            class="fa-solid fa-forward-step"></i></i></button>
                 </div>
             </div>
             <div class="card-footer">
@@ -58,4 +63,5 @@
     <script src="musicplayer.js"></script>
     <script src="app.js"></script>
 </body>
+
 </html>
